Bug 96279 - Crash: When press cancel button on Authentication Required window, after press cancel button on Remote Files Window
Summary: Crash: When press cancel button on Authentication Required window, after pre...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.0.1
Keywords:
: 96349 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-12-06 05:48 UTC by sawakaze
Modified: 2016-10-25 18:54 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Step2 and Step 3 (102.34 KB, image/png)
2015-12-06 05:48 UTC, sawakaze
Details
bt with debug symbols (13.10 KB, text/plain)
2015-12-19 18:42 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sawakaze 2015-12-06 05:48:21 UTC
Created attachment 121065 [details]
Step2 and Step 3

Hi,

I confirmed crash libreoffice on Open Remote File.(FTP connection)
After following steps, LibreOffice was Crashed.

Step1 : Open Authentication Required window(i.e. User input wrong password)
Step2 : Press Cancel button On Remote Files Window
Step3 : Press Cancel Button Authentication Required window
---> Crash! 

The detail description about Step2 and Step3 is Attachment file.

I confirmed following env
OS : Debian Jessie x64
Desktop : MATE

Version: 5.2.0.0.alpha0+
Build ID: 8ac2b6d077f4e7b1c5a010c2960fb08c0132da5f
Threads 4; Ver: Linux 3.16; Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2015-12-05_01:25:26
Locale: ja-JP (ja_JP.UTF-8)

regards,
Sawakaze.
Comment 1 Shinji Enoki 2015-12-06 07:27:01 UTC
I was reproduced in the following versions.

Version: 5.1.0.0.beta2
Build ID: 53054959a12edc6510f51b94ddc9b73d27aedaf6
Locale: ja-JP (ja_JP.UTF-8)
Debian GNU/Linux 8.2 (jessie) x86-64



But, the first time, I don't reproduce.
I was unable to do "step 2" before "step 3".
When the "Open Authentication Required" dialog is open, "Remote Files" was not able to dialog the operation.
Comment 2 dandan_611 2015-12-06 07:29:23 UTC
I was reproduced in the following versions.

Version: 5.1.0.0.beta2 (x64)
Build ID: 53054959a12edc6510f51b94ddc9b73d27aedaf6
Threads 4; Ver: Windows 6.29; Render: GL; 

Locale: ja-JP (ja_JP)
Comment 3 Julien Nabet 2015-12-19 18:42:31 UTC
Created attachment 121413 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 4 Julien Nabet 2015-12-19 18:43:32 UTC
*** Bug 96349 has been marked as a duplicate of this bug. ***
Comment 5 Caolán McNamara 2016-05-26 13:54:46 UTC
sounds like dialog have got the wrong parent and are not properly blocking each other in the right order
Comment 6 Commit Notification 2016-05-26 16:08:13 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7417311fc0f888223ae05f1cfc750de1735c5c9e

Resolves: tdf#96279 set correct parents for password dialogs

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2016-05-26 16:15:17 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a75c8e8dce22facea5eae454d050515f169a3f8b&h=libreoffice-5-2

Resolves: tdf#96279 set correct parents for password dialogs

It will be available in 5.2.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.