Resolves: tdf#96279 set correct parents for password dialogs

otherwise on Dialog::Execute before it becomes visible and
a password dialog is needed the new dialog will automatically
look for a parent, but will be parented by the main window
because the dialog it should be a parent of is not visible
yet.

Change-Id: Ia34e43d7ef2b204b348f2eb5aab542ee8ffe840e